# glod

./: .gitignore  LICENSE.txt  README.md  alembic.ini  architecture.md  pyproject.toml  requirements.txt
deploy/alembic/: env.py  script.py.mako
deploy/alembic/versions/: 0e5581770c32_empty_database.py  10b2a0ab0e75_rebate_submission.py  227429247f97_tax_rebate.py  4f72de1ff38b_create_schema.py  6fb351569d30_create_tables.py
requirements/: dev.txt  runtime.txt
src/a_tuin/: constants.py
src/a_tuin/api/: __init__.py  connection.py  decorators.py  fields.py  graphene.py  leaf.py  mutations.py  node.py  types.py
src/a_tuin/db/: __init__.py  exceptions.py  mapper.py  metadata.py  paged_query.py  query.py  relation_map.py  session_scope.py  table_map.py
src/a_tuin/in_out/: formulae.py  google_docs.py  google_drive.py  google_sheets.py  gsheet_integration.py  pdf_merge.py
src/a_tuin/io/: google_sheets.py  gsheet_integration.py
src/a_tuin/metadata/: __init__.py  args_field_group.py  collection.py  exceptions.py  field.py  field_derivations.py  field_group.py  field_transformations.py  mapping.py  object_field_group_meta.py  reference.py
src/glod/: configuration.py
src/glod/api/: account_leaf.py  account_node.py  address_leaf.py  address_node.py  counterparty_leaf.py  counterparty_node.py  fund_leaf.py  fund_node.py  graphene.py  nominal_account_leaf.py  nominal_account_node.py  organisation_address_leaf.py  organisation_address_node.py  organisation_leaf.py  organisation_node.py  parishioner_leaf.py  parishioner_node.py  person_leaf.py  person_node.py  schema.py  (+8 more)
(+198 files in other folders)
